Fixed value of visibility of canvas.

--- a/stripes.css
+++ b/stripes.css
@@ -7,5 +7,5 @@ body
 
 canvas
 {
-	visibility: 0;
+	visibility: hidden;
 }
